--- a/components/pca9685/Kconfig
+++ b/components/pca9685/Kconfig
@@ -1,14 +1,14 @@
-menu "Example Configuration"
+menu "Mega Unicorn Gundam Configuration"
 
-    config I2C_MASTER_SCL
-        int "SCL GPIO Num"
+    config PCA9685_I2C_MASTER_SCL
+        int "PCA9685 - SCL GPIO Num"
         default 6 if IDF_TARGET_ESP32C3
         default 19 if IDF_TARGET_ESP32 || IDF_TARGET_ESP32S2 || IDF_TARGET_ESP32S3
         help
             GPIO number for I2C Master clock line.
 
-    config I2C_MASTER_SDA
-        int "SDA GPIO Num"
+    config PCA9685_I2C_MASTER_SDA
+        int "PCA9685 - SDA GPIO Num"
         default 5 if IDF_TARGET_ESP32C3
         default 18 if IDF_TARGET_ESP32 || IDF_TARGET_ESP32S2 || IDF_TARGET_ESP32S3
         help
