--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,7 +2,7 @@ set(srcs
         "main.c"
 )
 
-set(requires "pca9685")
+set(requires "pca9685" "esp_timer")
 
 idf_component_register(SRCS "${srcs}"
         INCLUDE_DIRS "."
