--- a/components/pca9685_servo/CMakeLists.txt
+++ b/components/pca9685_servo/CMakeLists.txt
@@ -2,3 +2,5 @@ idf_component_register(SRC_DIRS "src"
         INCLUDE_DIRS "include"
         REQUIRES "pca9685" "esp_timer"
 )
+
+target_compile_definitions(${COMPONENT_LIB} PUBLIC "-DLOG_LOCAL_LEVEL=ESP_LOG_WARN")
