--- a/components/pca9685/CMakeLists.txt
+++ b/components/pca9685/CMakeLists.txt
@@ -1,4 +1,5 @@
-idf_component_register(SRC_DIRS "src"
-        INCLUDE_DIRS "src"
-        REQUIRES "driver"
+idf_component_register(
+    SRCS pca9685.c
+    INCLUDE_DIRS .
+    REQUIRES i2cdev log esp_idf_lib_helpers
 )
